Deprecated output_file for filename kw, auto y lc

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 description = "Animated plotting extension for Pandas with Matplotlib"
 authors = ["JackMcKew <jackmckew2@gmail.com>"]
 readme = "README.md"
+repository = "https://github.com/JackMcKew/pandas_alive"
 license = "MIT"
 
 [tool.poetry.dependencies]
