--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -2,54 +2,25 @@ name: Build & Publish Docs with Sphinx
 
 on:
   push:
-    branches:    
-      - master
+    branches:
+    - master
 
 jobs:
-  build:
-
+  release:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
+
     - uses: actions/checkout@v1
-    # Standard drop-in approach that should work for most people.
-    - uses: ammaraskar/sphinx-action@master
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v1
       with:
-        docs-folder: "docs/"
-    # Grabbing custom dependencies and building as a pdf.
-    - uses: ammaraskar/sphinx-action@master
-      with:
-        pre-build-command: "apt-get update -y && apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended"
-        build-command: "make latexpdf"
-        docs-folder: "docs/"
-    # Great extra actions to compose with:
-    # Create an artifact of the html output.
-    - uses: actions/upload-artifact@v1
-      with:
-        name: DocumentationHTML
-        path: docs/_build/html/
-    # Create an artifact out of the previously built pdf.
-    - uses: actions/upload-artifact@v1
-      with:
-        name: Documentation
-        path: docs/_build/latex/pdfexample.pdf
-    # Publish built docs to gh-pages branch.
-    # ===============================
-    - name: Commit documentation changes
+        python-version: 3.7
+    - name: Install dependencies
       run: |
-        git clone https://github.com/ammaraskar/sphinx-action-test.git --branch gh-pages --single-branch gh-pages
-        cp -r docs/_build/html/* gh-pages/
-        cd gh-pages
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .
-        git commit -m "Update documentation" -a || true
-        # The above command will fail if no changes were present, so we ignore
-        # that.
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        branch: gh-pages
-        directory: gh-pages
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-    # ===============================
+        sudo apt install pandoc
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Build sphinx documentation
+      run: |
+        make html
