--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -17,19 +17,22 @@ jobs:
       with:
         python-version: 3.7
 
-    - name: Install dependencies
+    - name: Install dependencies & Convert README
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
-    - name: Convert README and Move
-      run: |
         m2r README.md
-        sed -i 's/\.\. image:: examples/\.\. image:: \.\./\.\./examples/g' README.rst
-        mv README.rst docs/source
 
-    - name: Build sphinx documentation
+    - name: Find and Replace
+      uses: jacobtomlinson/gha-find-replace@master
+      with:
+        find: ".. image:: examples"
+        replace: ".. image:: ../../examples"
+        include: "README.rst"
+        
+    - name: Move README.rst & Build sphinx documentation
       run: |
+        mv README.rst docs/source
         cd docs
         make html
     
