Build docs on release and jupyter README

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,9 +1,9 @@
 name: Build & Publish Docs with Sphinx
 
 on:
-  push:
-    branches:
-    - master
+  release:
+    types: [published]
+
 
 jobs:
   release:
