--- a/requirements.txt
+++ b/requirements.txt
@@ -2,35 +2,59 @@ alabaster==0.7.12
 appdirs==1.4.3
 atomicwrites==1.4.0
 attrs==19.3.0
+autodocsumm==0.1.13
 Babel==2.8.0
+backcall==0.1.0
 black==19.10b0
+bleach==3.1.5
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
 commonmark==0.9.1
 cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
 docutils==0.16
+entrypoints==0.3
 idna==2.9
 imagesize==1.2.0
+ipykernel==5.2.1
+ipython==7.14.0
+ipython-genutils==0.2.0
+jedi==0.17.0
 Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter-client==6.1.3
+jupyter-core==4.6.3
 kiwisolver==1.2.0
 m2r==0.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mistune==0.8.4
 more-itertools==8.2.0
+nbconvert==5.6.1
+nbformat==5.0.6
 numpy==1.18.3
 packaging==20.3
 pandas==1.0.3
+pandoc-attributes==0.1.7
+pandocfilters==1.4.2
+parso==0.7.0
 pathspec==0.8.0
+pickleshare==0.7.5
 pluggy==0.13.1
+prompt-toolkit==3.0.5
 py==1.8.1
+pydata-sphinx-theme==0.2.2
 Pygments==2.6.1
 pyparsing==2.4.7
+pyrsistent==0.16.0
 pytest==5.4.1
 python-dateutil==2.8.1
 pytz==2020.1
+pywin32==227
+pyzmq==19.0.1
 recommonmark==0.6.0
 regex==2020.4.4
 requests==2.23.0
@@ -45,7 +69,11 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
 tabulate==0.8.7
+testpath==0.4.4
 toml==0.10.0
+tornado==6.0.4
+traitlets==4.3.3
 typed-ast==1.4.1
 urllib3==1.25.9
 wcwidth==0.1.9
+webencodings==0.5.1
