--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ pyrsistent==0.16.0
 pytest==5.4.1
 python-dateutil==2.8.1
 pytz==2020.1
-pywin32==227; sys_platform == "win32"-
+pywin32==227 ; sys_platform == 'win32'
 pyzmq==19.0.1
 recommonmark==0.6.0
 regex==2020.4.4
