Single quotes only
Former-commit-id: be9f950471aed205f54752d9c1adbd0c9fa3aa7e

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -31,7 +31,7 @@ jobs:
         git commit -m "Convert README.ipynb to README.md" -a
 
     - name: Push changes
-      if: success() && github.actor == "JackMcKew"
+      if: success() && github.actor == 'JackMcKew'
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.ACCESS_TOKEN }}
