Single quotes in actions
Former-commit-id: 7756bfeda2a654d5a61ceb4a05905d298496ef08

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -24,7 +24,7 @@ jobs:
         jupyter nbconvert --template "pythoncodeblocks.tpl" --ClearMetadataPreprocessor.enabled=True --ClearOutput.enabled=True  --to markdown README.ipynb
 
     - name: Commit files
-      if: github.actor == "JackMcKew"
+      if: github.actor == 'JackMcKew'
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
