Conditional at job level

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   release:
+    if: github.actor == 'JackMcKew'
     name: Build
     runs-on: ubuntu-latest
     steps:
@@ -24,14 +25,13 @@ jobs:
         jupyter nbconvert --template "pythoncodeblocks.tpl" --ClearMetadataPreprocessor.enabled=True --ClearOutput.enabled=True  --to markdown README.ipynb
 
     - name: Commit files
-      if: github.actor == 'JackMcKew'
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git commit -m "Convert README.ipynb to README.md" -a
 
     - name: Push changes
-      if: success() && github.actor == 'JackMcKew'
+      if: success()
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.ACCESS_TOKEN }}
