--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -24,6 +24,9 @@ jobs:
         pip install -r requirements.txt
         jupyter nbconvert --template "pythoncodeblocks.tpl" --ClearMetadataPreprocessor.enabled=True --ClearOutput.enabled=True  --to markdown README.ipynb
   
+    - name: Generate TOC
+      uses: technote-space/toc-generator@v2
+
     - name: Commit files
       run: |
         git config --local user.email "action@github.com"
@@ -35,9 +38,3 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.ACCESS_TOKEN }}
-
-  generateTOC:
-    name: TOC Generator
-    runs-on: ubuntu-latest
-    steps:
-      - uses: technote-space/toc-generator@v2
