Add readme in commit

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git add README.md
         git commit -m "Convert README.ipynb to README.md" -a
 
     - name: Push changes
