--- a/.github/workflows/toc.yml
+++ b/.github/workflows/toc.yml
@@ -2,7 +2,7 @@ on: push
 name: TOC Generator
 jobs:
   generateTOC:
-    if: "startsWith(github.event.head_commit.message, 'Convert README.ipynb')"
+    if: startsWith(github.event.head_commit.message, 'Convert README.ipynb')
     name: TOC Generator
     runs-on: ubuntu-latest
     steps:
