--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,10 @@ version = "0.1.13"
 description = "Animated plotting extension for Pandas with Matplotlib"
 authors = ["JackMcKew <jackmckew2@gmail.com>"]
 readme = "README.md"
+homepage = "https://github.com/JackMcKew/pandas_alive"s
 repository = "https://github.com/JackMcKew/pandas_alive"
 license = "MIT"
+documentation = "https://jackmckew.github.io/pandas_alive/"
 
 [tool.poetry.dependencies]
 python = "^3.6.1"
