Add warning for descartes
Former-commit-id: ada3c9b4d98fd6f8788f635bb7873f0635b4d991 [formerly fec0952ed7666c3c34a534dc1b21af50d1fb66e9]
Former-commit-id: d2e19a40cfdd09c0cd8a0134d4ca592a3f4e8dab

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pandas_alive"
-version = "0.2.1"
+version = "0.2.2"
 description = "Animated plotting extension for Pandas with Matplotlib"
 authors = ["JackMcKew <jackmckew2@gmail.com>"]
 readme = "README.md"
@@ -13,6 +13,8 @@ documentation = "https://jackmckew.github.io/pandas_alive/"
 python = "^3.6.1"
 pandas = "^1.0.3"
 matplotlib = "^3.2.1"
+attrs = "^19.3.0"
+pillow = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 
