--- a/.github/workflows/interrogate_docs.yml
+++ b/.github/workflows/interrogate_docs.yml
@@ -33,4 +33,5 @@ jobs:
       if: success()
       uses: ad-m/github-push-action@master
       with:
+        branch: main
         github_token: ${{ secrets.ACCESS_TOKEN }}
